[ACPI] Workaround "_BBN 0" BIOS bug enhance "pci=noacpi" to skip ACPI PCI configuration and interrupt config add "acpi=noirq" to skip just ACPI interrupt config (David Shaohua Li) http://bugzilla.kernel.org/show_bug.cgi?id=1662